add endpoint watchlist
