# middlewares/verifyToken.js
@@ -34,7 +34,7 @@ const jwt = require("jsonwebtoken");
 // };
 
 const verifyToken = (req, res, next) => {
-  const token = req.headers("auth-token") || req.headers("Auth-token");
+  const token = req.header("auth-token") || req.header("Auth-token");
   if (!token) {
     return res.status(401).send("Access denied");
   }
